apps/data/postgres/overlay/ui-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "postgres-operator-ui"
  labels:
    name: "postgres-operator-ui"
  annotations:
    link.argocd.argoproj.io/external-link: http://databases
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: "postgres-operator-ui"
  template:
    metadata:
      labels:
        name: "postgres-operator-ui"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
        - name: "service"
          image: registry.opensource.zalan.do/acid/postgres-operator-ui:v1.8.1
          ports:
            - containerPort: 80
              protocol: "TCP"
          readinessProbe:
            httpGet:
              path: "/health"
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
