apps/data/postgres/overlay/postgres-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "postgres-operator-ui"
  labels:
    application: "postgres-operator-ui"
